[tool.poetry]
name = "mindiffusion"
version = "0.1.0"
description = ""
authors = ["sontyubo <sontyubo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.3.1"
torchvision = "^0.18.1"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
